# training-rust

./: Cargo.toml
src/: main.rs
src/shared/: mod.rs
